Added pizza recipe

--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Italian Food Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna/lasagna.html">Lasagna</a>
+    <h1>Italian Food Recipes</h1>
+    <img src="mordor.jpg" alt="meme">
+    </ul>
+    <li><a href="recipes/lasagna/lasagna.html">Lasagna</a></li>
+    <li><a href="recipes/pepperoni-pizza/pizza.html">Pepperoni Pizza</a></li>
+    <!--reserved for a third recipe-->
+    </ul>
 </body>
 </html>
