--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <h1>Italian Food Recipes</h1>
-    <img src="mordor.jpg" alt="meme">
+    <img src="/index/mordor.jpg" alt="meme">
     </ul>
-    <li><a href="../recipes/lasagna/lasagna.html">Lasagna</a></li>
-    <li><a href="../recipes/pepperoni-pizza/pizza.html">Pepperoni Pizza</a></li>
+    <li><a href="/recipes/lasagna/lasagna.html">Lasagna</a></li>
+    <li><a href="/recipes/pepperoni-pizza/pizza.html">Pepperoni Pizza</a></li>
     <!--reserved for a third recipe-->
     </ul>
 </body>
