--- a/recipes/lasagna/lasagna.html
+++ b/recipes/lasagna/lasagna.html
@@ -37,7 +37,7 @@
         <li>Bake in the preheated oven for 45 minutes. Uncover and bake for an additional 10 minutes. Let stand 10 minutes before serving.</li>
     </ol>
     
-    <a href="/index.html">Return to main page</a>
+    <a href="/../index.html">Return to main page</a>
 
 </body>
 </html>
