--- a/recipes/pepperoni-pizza/pizza.html
+++ b/recipes/pepperoni-pizza/pizza.html
@@ -29,6 +29,6 @@
             <li>Place on ungreased pizza pan. Bake 12 to 15 minutes or until edges of crust are browned lightly and cheese melts. Cut pizza into 6 slices.</li>
         </ol>
 
-    <a href="/index.html">Return to main page</a>
+    <a href="/../index.html">Return to main page</a>
 </body>
 </html>
