Added css styling

--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Italian Food Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Italian Food Recipes</h1>
     <img src="index/mordor.jpg" alt="meme">
     </ul>
+    <div class = "lasagna">
     <li><a href="recipes/lasagna/lasagna.html">Lasagna</a></li>
+    </div>
+    <div class = "pizza">
     <li><a href="recipes/pepperoni-pizza/pizza.html">Pepperoni Pizza</a></li>
+    </div>
     <!--reserved for a third recipe-->
     </ul>
 </body>
